base/model-serving/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synesis-models
  labels:
    app.kubernetes.io/part-of: synesis
    opendatahub.io/dashboard: "true"
